--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -1,106 +1,84 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div>
+    <div class="row">
+        <div class="jumbotron text-center">
+            <h1 class="display-4 ">Headline with hard hitting stats about women's health</h1>
+            <p class="lead">Do you know your risk?</p>
+            <button class="btn btn-primary">Click to learn more</button>
+        </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <h4 class="text-center">Do you have a question about heart disease, risk factors,</h4> <h4>treatments, or anything else related to heart health?</h4>
+        <p class="mb-0">Our team of healthcare professionals at the Karen Yontz Center are available to provide information, answer</p>
+        <p class="mt-0">questions and offer guidance on nutrition, fitness and other healthy lifestyle topics.</p>
+    </div>
+    <div class="row justify-content-md-center">
+        <button class="btn btn-light btn-lg">Contact Us</button>
+    </div>
+    
+    <div class="row mt-5">
+     
+        <ul class="list-unstyled col-md-6">
+            <li class="media">
+                <img class="mr-3" src="http://placehold.it/250x150" />
+                <div class="media-body">
+                    <h4>Risk Factors Quiz</h4>
+                    <h6><em>Know your risks</em></h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+                </div>
+            </li>
+        
+            <li class="media mt-5">
+                <img class="mr-3" src="http://placehold.it/250x150" />
+                <div class="media-body">
+          
+                    <h4>Featured Article Title</h4>
+                    <h6><em>Smoking</em></h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+                </div>
+            </li>  
+        </ul>
+        <ul class="list-unstyled col-md-6">
+            <li class="media">
+                <img class="mr-3" src="http://placehold.it/250x150" />
+                <div class="media-body">
+               
+                    <h4>Healthy Heart Recipies</h4>
+                    <h6><em>Nutrition</em></h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+                </div>
+            </li>
+            <li class="media mt-5">
+                <img class="mr-3" src="http://placehold.it/250x150" />
+                <div class="media-body">
+              
+                    <h4>Cholesterol Section Link</h4>
+                    <h6><em>Resources</em></h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+                </div>
+            </li>
+        </ul>
+       
+    </div>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+    <div class="row mt-5">
+        <div class="jumbotron text-center">
+            <h1 class="display-4 ">Karen Yontz Center Services</h1>
+            <p class="lead">A description of some of the services that the center offers, consectetur adipiscing elit. Proin et ante ut lacus porttitor varius. Vivamus eu sapien ut nunc viverra sollicitudin ac rhoncus odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+            <button class="btn btn-primary">Click to learn more</button>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+    <div class="row background bg-secondary">
+        <div class="col-md-1"></div>
+        <div class="col-md-8 mt-2 mb-2">
+            <h3> Stay informed about women's cardiac health</h3>
+            <h5>Our monthly newsletter includes heart health tips, articles, recipes, and more.</h5>
+        </div>
+        <div class="col">
+            <button class="btn btn-dark btn-lg mt-3 ml-3">Sign Up</button>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+    <hr/>
+    <div class="row">
+        
     </div>
 </div>
